syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse){}
  rpc SumWithDealine(SumRequest) returns (SumResponse){}
  rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse){}
  rpc Average(stream AverageRequest) returns (AverageResponse){}
  rpc Max(stream FindMaxRequest) returns (stream FindMaxResponse){}
  rpc Sqrt(SqrtRequest) returns (SqrtResponse){}
}

message SumRequest{
  int32 number1 = 1;
  int32 number2 = 2;
}

message SumResponse{
  int32 result = 1;
}

message PNDRequest{
  int32 number = 1;
}

message PNDResponse{
  int32 result = 2;
}

message AverageRequest{
  int32 number = 1;
}

message AverageResponse{
  float result = 1;
}

message FindMaxRequest{
  int32 number = 1;
}

message FindMaxResponse{
  int32 result = 1;
}

message SqrtRequest{
  int32 number = 1;
}

message SqrtResponse{
  double result = 1;
}